[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "marketmind-pro"
version = "1.1.0"
description = "Autonomous trading intelligence system for TASE & US markets — Hebrew Telegram bot + Streamlit dashboard"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["trading", "stocks", "TASE", "telegram", "quantitative", "fibonacci", "arbitrage"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security (via ruff)
    "N",   # pep8-naming
]
ignore = [
    "S101",   # assert in tests is fine
    "S311",   # random module OK for non-crypto uses
    "E501",   # line too long — unavoidable with Hebrew strings and long f-strings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: pure logic tests, no I/O",
    "integration: requires postgres + redis (docker)",
    "slow: long-running tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
targets = ["src"]
severity = "medium"
confidence = "medium"
skips = ["B101"]  # allow assert statements
